# YM_data_collection

./: .env.example  .gitignore  AGENTS.md  README.md  __init__.py  pyproject.toml
adapters/: __init__.py  binance_gateway.py  binance_perp.py  binance_spot.py  binance_ws_manager.py  rate_limiter.py
api/: app.py  auth.py  middleware.py  response.py
apps/: __init__.py  _cli_common.py  init_mysql_schema.py  rebuild_manifest.py  run_cache_consistency_check.py  run_data_api.py  run_export_dataset.py  run_historical_derivatives_sync.py  run_historical_klines_sync.py  run_manifest_audit.py  run_quality_check.py  run_realtime_ingest.py  run_recovery_sync.py  run_resync_range.py  run_service_health_check.py  sync_instruments.py
cache/: __init__.py  keyspace.py  redis_client.py
config/: base.yaml  dev.yaml  loader.py  models.py  prod.yaml
domain/: __init__.py  models.py
export/: parquet_writer.py  resampler.py
ingestion/: __init__.py  realtime_depth_handler.py  realtime_derivatives_handler.py  realtime_kline_handler.py
normalization/: __init__.py  derivatives_normalizer.py  kline_normalizer.py
persistence/: datetime_utils.py  flush_worker.py  migrations.py  mysql.py
quality/: cache_checker.py  checkers.py  health_checker.py
scripts/: __init__.py  acceptance_checklist.py
services/: coverage_service.py  query_service.py  slippage_service.py  snapshot_service.py
tests/: __init__.py  test_api_klines.py  test_api_metadata.py  test_api_slippage.py  test_api_snapshot.py  test_api_system.py  test_binance_gateway.py  test_binance_ws_manager.py  test_cache_consistency.py  test_cache_keyspace.py  test_checkpoint_repo.py  test_cli_common.py  test_cli_help.py  test_config_loader.py  test_contract_http.py  test_contract_ws.py  (+42 more)
(+33 files in other folders)
